# ViraithIDE

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  features_plan.md  next.config.ts  package.json  pnpm-lock.yaml
docs/: SKILL.md  SPECIFICATION.md
documentation/: VIRAITH_MASTER_SPECIFICATION.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: files.rs  git.rs  lib.rs  main.rs
src-tauri/src/commands/: board.rs  card.rs  column.rs  file.rs  git.rs  mod.rs  project.rs  shell.rs  window.rs
src-tauri/src/database/: mod.rs  schema.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: providers.tsx
src/components/chat/: ChatPanel.tsx
src/components/editor/: CodeEditor.tsx
src/components/kanban/: Board.tsx  Card.tsx  Column.tsx  index.ts
src/components/layout/: Header.tsx  ResizeHandle.tsx  Sidebar.tsx
src/components/preview/: LivePreview.tsx
src/components/signal/: SignalFeed.tsx
src/components/skills/: SkillsPanel.tsx
src/components/terminal/: Terminal.tsx  TerminalPanel.tsx  VibeTerminal.tsx
src/components/timeline/: DiffViewer.tsx  TimelinePanel.tsx
src/hooks/: useResizablePanel.ts
src/lib/: agent.ts  api-init.ts  localAgent.ts  tauri.ts  terminalTheme.ts  utils.ts
src/store/: boardStore.ts  fileStore.ts  skillsStore.ts  terminalStore.ts  timelineStore.ts
src/types/: index.ts  monaco.d.ts
