[package]
name = "viraith-ide"
version = "0.1.0"
description = "VIRAITH IDE - Observe. Compare. Build."
authors = ["VIRAITH Team"]
edition = "2021"

[lib]
name = "viraith_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = "0.19"

# File watching
notify = "7.0"
walkdir = "2.5"
ignore = "0.4"

# Search
grep-regex = "0.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
